public abstract class TicketDecorator extends Ticket {

  public abstract String ticketDesc();
  public abstract Double getPrice();

}

